footer seperated to its own component, Service page design started

--- a/ios/evoraistanbul/Info.plist
+++ b/ios/evoraistanbul/Info.plist
@@ -73,6 +73,9 @@
 		<string>rubicon-icon-font.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Montserrat-Bold.ttf</string>
+		<string>Montserrat-Regular.ttf</string>
+		<string>Montserrat-Thin.ttf</string>
 	</array>
 </dict>
 </plist>
